--- a/parroquiaproject/sitio/templates/publicacion_edicion_rechazada_email.html
+++ b/parroquiaproject/sitio/templates/publicacion_edicion_rechazada_email.html
@@ -1,7 +1,7 @@
 {% autoescape off %}
 <p>Hola {{ user.username }},</p>
 <p>
-  Tu publicación 
+  La edición que solicitaste en la publicación 
   "<strong>{{ noticia.titulo }}</strong>" 
   ha sido <strong><span style="color: red;">RECHAZADA</span></strong>.
 </p>
