--- a/parroquiaproject/sitio/templates/check_post.html
+++ b/parroquiaproject/sitio/templates/check_post.html
@@ -80,7 +80,7 @@
                 {% elif post.imagen %}
                   <img src="{{ post.imagen.url }}" 
                   alt="{{ post.titulo }}"
-                  class="img-fluid mb-3"
+                  class="img-fluid mb-0"
                   style="width: 200px; height: 300px; object-fit: cover; cursor: pointer;"
                   onclick="openLightbox('{{ post.imagen.url }}')">
                 {% else %}
@@ -117,7 +117,7 @@
               </div>
 
               <!-- Fecha -->
-              <div class="d-flex justify-content-between mt-auto">
+              <div class="d-flex align-items-center mt-auto" style="font-size: 0.9em;">
                 {% if post.en_revision_edicion %}
                   <span class="badge bg-warning text-dark">Edición pendiente
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stopwatch-fill" viewBox="0 0 16 16">
@@ -125,7 +125,8 @@
                     </svg></span>
                   </span>
                 {% endif %}
-                <small class="text-muted">{{ post.fecha|date:"d/m/Y H:i" }}</small>
+
+                <small class="text-muted ms-auto" >{{ post.fecha|date:"d/m/Y H:i" }}</small>
               </div>
             </div>
 
@@ -185,13 +186,13 @@
                 {% if post.imagen_editada %}
                   <img src="{{ post.imagen_editada.url }}" 
                   alt="{{ post.titulo }}"
-                  class="img-fluid mb-3"
+                  class="img-fluid mb-0"
                   style="width: 200px; height: 300px; object-fit: cover; cursor: pointer;"
                   onclick="openLightbox('{{ post.imagen_editada.url }}')">
                 {% elif post.imagen %}
                     <img src="{{ post.imagen.url }}" 
                     alt="{{ post.titulo }}"
-                    class="img-fluid mb-3"
+                    class="img-fluid mb-0"
                     style="width: 200px; height: 300px; object-fit: cover; cursor: pointer;"
                     onclick="openLightbox('{{ post.imagen.url }}')">
                 {% else %}
@@ -211,49 +212,102 @@
           <!-- Estado -->
           <div class="col-md-4 post-body p-3 text-center">
             <div>
-              <p class="mb-2"><strong>Esta publicación está</strong></p>
+              <p class="mb-1"><strong>Esta publicación está</strong></p>
               {% if post.estado == "pendiente" %}
-                <span class="badge bg-warning text-dark fs-6 mb-5"> Pendiente
+                <span class="badge bg-warning text-dark fs-6 mb-2"> Pendiente
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-stopwatch-fill" viewBox="0 0 16 16">
                     <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07A7.001 7.001 0 0 0 8 16a7 7 0 0 0 5.29-11.584l.013-.012.354-.354.353.354a.5.5 0 1 0 .707-.707l-1.414-1.415a.5.5 0 1 0-.707.707l.354.354-.354.354-.012.012A6.97 6.97 0 0 0 9 2.071V1h.5a.5.5 0 0 0 0-1zm2 5.6V9a.5.5 0 0 1-.5.5H4.5a.5.5 0 0 1 0-1h3V5.6a.5.5 0 1 1 1 0"/>
                     </svg></span>
               {% elif post.estado == "aprobado" %}
-                <span class="badge bg-success fs-6 mb-5"> Aprobada 
+                <span class="badge bg-success fs-6 mb-2"> Aprobada 
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-check-square-fill" viewBox="0 0 16 16">
                     <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z"/>
                     </svg></span>
               {% elif post.estado == "rechazado" %}
-                <span class="badge bg-danger fs-6"> Rechazada
+                <span class="badge bg-danger fs-6 mb-2"> Rechazada
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
                     <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z"/>
                     </svg></span>
-                <div class="mt-2 mb-4">
-                  <small>
-                    <strong>Motivo:</strong> {{ post.motivo_rechazo }}
-                  </small>
+                  <div class="mt-2 mb-4" style="max-height: 85px; overflow-y: auto; padding: 6px; border: 1px solid #ddd; border-radius: 6px; background: #f9f9f9;">
+                    <small>
+                      <strong>Motivo:</strong> {{ post.motivo_rechazo }}  
+                    </small>
+                  </div>
+                <!-- Botón que abre modal -->
+                <button type="button" class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#retryModal-{{ post.id }}">
+                  Editar publicación
+                </button>
+
+                <!-- Modal Reintentar -->
+                <div class="modal fade" id="retryModal-{{ post.id }}" tabindex="-1" aria-labelledby="retryModalLabel-{{ post.id }}" aria-hidden="true">
+                  <div class="modal-dialog modal-lg modal-dialog-centered">
+                    <div class="modal-content">
+                      
+                      <div class="modal-header" style="background-color: #d0ccbb;">
+                        <h5 class="modal-title" id="retryModalLabel-{{ post.id }}">Reenviar publicación</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                      </div>
+
+                      <div class="modal-body" style="background-color: #E8E3D0;">
+                        <form method="post" enctype="multipart/form-data">
+                          {% csrf_token %}
+                          <input type="hidden" name="noticia_id" value="{{ post.id }}">
+                          
+                          <div class="mb-3">
+                            <label for="titulo-{{ post.id }}" class="form-label d-block text-start" style="display:block; text-align:left;">
+                              Nuevo título
+                            </label>
+                            <input type="text" name="titulo" id="titulo-{{ post.id }}" class="form-control" required>
+                          </div>
+
+                          <div class="mb-3">
+                            <label for="descripcion-{{ post.id }}" class="form-label d-block text-start" style="display:block; text-align:left;">
+                              Nueva descripción
+                            </label>
+                            <textarea name="descripcion" id="descripcion-{{ post.id }}" class="form-control" rows="4" required></textarea>
+                          </div>
+
+                          <div class="mb-3">
+                            <label for="imagen-{{ post.id }}" class="form-label d-block text-start" style="display:block; text-align:left;">
+                              Nueva imagen
+                              <label class="form-text text-start"><small>(opcional)</small></label>
+                            </label>
+                            <input type="file" name="imagen" id="imagen-{{ post.id }}" class="form-control">
+                            <div class="form-text text-start">Dejá vacío eliminar la imagen actual.</div>
+                          </div>
+
+                          <div class="modal-footer">
+                            <button type="submit" class="btn btn-success w-100" form="formCrearNoticia">Aplicar cambios</button>
+                            <button type="button" class="btn btn-secondary w-100" data-bs-dismiss="modal">Cancelar</button>
+                          </div>
+                        </form>
+                      </div>
+
+                    </div>
+                  </div>
                 </div>
               {% endif %}
             </div>
 
             <div>
               {% if post.en_revision_edicion or post.estado_edicion %}
-              <p class="mb-2"><strong>La edición está</strong></p>
+              <p class="mb-1"><strong>La edición está</strong></p>
               {% if post.en_revision_edicion %}
-                <span class="badge bg-warning text-dark fs-6 mb-5"> Pendiente
+                <span class="badge bg-warning text-dark fs-6 mb-2"> Pendiente
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-stopwatch-fill" viewBox="0 0 16 16">
                     <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07A7.001 7.001 0 0 0 8 16a7 7 0 0 0 5.29-11.584l.013-.012.354-.354.353.354a.5.5 0 1 0 .707-.707l-1.414-1.415a.5.5 0 1 0-.707.707l.354.354-.354.354-.012.012A6.97 6.97 0 0 0 9 2.071V1h.5a.5.5 0 0 0 0-1zm2 5.6V9a.5.5 0 0 1-.5.5H4.5a.5.5 0 0 1 0-1h3V5.6a.5.5 0 1 1 1 0"/>
                     </svg></span>
               {% elif post.estado_edicion == "aprobado" %}
-                <span class="badge bg-success fs-6 mb-5"> Aprobada 
+                <span class="badge bg-success fs-6 mb-2"> Aprobada 
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-check-square-fill" viewBox="0 0 16 16">
                     <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z"/>
                     </svg></span>
               {% elif post.estado_edicion == "rechazado" %}
-                <span class="badge bg-danger fs-6"> Rechazada
+                <span class="badge bg-danger fs-6 mb-2"> Rechazada
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
                     <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z"/>
                     </svg></span>
-                <div class="mt-2 mb-4">
+                <div class="mt-1 mb-0" style="max-height: 85px; overflow-y: auto; padding: 6px; border: 1px solid #ddd; border-radius: 6px; background: #f9f9f9;">
                   <small>
                       <strong>Motivo:</strong> {{ post.motivo_rechazo_edicion }}
                   </small>
