--- a/parroquiaproject/sitio/templates/publicacion_edicion_aprobada_email.html
+++ b/parroquiaproject/sitio/templates/publicacion_edicion_aprobada_email.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
-<p>Hola {{ user.username }},</p>
+<p>Hola {{ user.username }}</p>
 <p>
   La edición que solicitaste en la publicación 
   "<strong>{{ noticia.titulo }}</strong>" 
