--- a/parroquiaproject/sitio/templates/publicacion_email.html
+++ b/parroquiaproject/sitio/templates/publicacion_email.html
@@ -1,4 +1,6 @@
 {% autoescape off %}
+<p>Hola {{ user.username }}</p>
+
 <p>La iglesia <strong>{{ iglesia.nombre }}</strong> a la que estás suscripto ha subido una nueva publicación en <b>Catholic Rafaela</b></p>
 
 <div style="padding-left: 20px; margin: 20px 0;">
